# orchestrator

./: .dockerignore  .gitignore  AGENTS.md  AGENT_PACK.md  API.md  ARCHITECTURE.md  CLAUDE.md  DOCTRINE.md  Dockerfile  Makefile  POSTMORTEM.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TESTING.md  WEBUI.md  coverage_map.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: adjudicator.md  converge-fixer.md  converge-reviewer.md  implementer.md  nitpicker.md  orchestrator.md  triager.md
archive/: DECISION_LOGIC.md  DEPLOYMENT.md  README.md  STATE_MACHINE.md  THREAT_MODEL.md
charts/orchestrator/: Chart.yaml  values-prod.yaml  values.yaml
charts/orchestrator/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/: AUTHENTIK.md  agent-runner.Dockerfile
scripts/: e2e_live_verify.sh  smoke_image.sh
src/: logging_setup.py
src/api/: auth.py  auth_routes.py  main.py  operator_routes.py  push.py  push_routes.py  routes.py  webhook.py
src/db/: __init__.py  audit.py  converge_state.py  counter.py  dsn.py  operator_store.py  push_store.py  run_store.py
src/decisions/: decide_cap_action.py  decide_conflict_action.py  decide_rearm_action.py  decide_redispatch_action.py  decide_round.py  decide_specialists.py  decide_stale_action.py  derive_state.py  intake.py  pipeline_health.py  resolve_blockers.py  route_entry.py  triager_reconcile.py
src/domain/: types.py
src/engine/: converge.py  dispatch.py  intake.py  reconcile.py
src/ports/: advisory_lock.py  agent_transcript.py  base.py  execution_backend.py  fakes.py  github.py  harness.py  harness_registry.py  i9_spawn_hook.py  provider.py  session_limit.py
src/service/: orchestrator.py  registry.py
tests/: conftest.py
tests/contracts/: conftest.py  test_converge_state_store.py  test_counter_store.py  test_forge_port.py  test_github_forge_port.py  test_harness_port.py  test_real_harness_port.py  test_session_port.py  test_sqlite_converge_state_store.py
tests/integration/: test_advisory_lock.py  test_await_run_poll_backoff.py  test_comment_dispatch_gate.py  test_converge_adjudication.py  test_converge_full.py  test_converge_happy.py  test_converge_per_repo_checks.py  test_converge_round_provision.py  test_converge_session_limit.py  test_converge_trigger_routing.py  test_counter_store_atomic.py  test_dispatch.py  test_dispatch_incident_fixes.py  test_dispatch_skeleton.py  test_idempotency.py  test_intake.py  test_k8s_backend_real.py  test_multi_repo.py  test_reconcile.py  test_run_event_streaming.py  test_run_status_sync.py  test_single_writer_connection.py  test_sqlite_wal_busy_timeout.py  test_sqlite_write_serialization.py  test_surface_dispatched_runs.py
tests/security/: test_auth.py  test_converge_protected_path.py  test_converge_security.py  test_intake_security.py  test_webhook.py
tests/tools/: test_check_coverage_map.py
tests/unit/: test_agent_transcript.py  test_api_routes.py  test_db_stores.py  test_decide_cap_action.py  test_decide_conflict_action.py  test_decide_intake.py  test_decide_rearm_action.py  test_decide_redispatch_action.py  test_decide_round.py  test_decide_specialists.py  test_decide_stale_action.py  test_decision_functions.py  test_doctrine_error_egress.py  test_doctrine_timeout_ordering.py  test_execution_backend.py  test_github_app_auth.py  test_github_forge_port.py  test_harness_i9_hook.py  test_harness_registry.py  test_health_probes.py  test_prod_config.py  test_push.py  test_real_harness_port.py  test_repo_registry.py  test_resolve_blockers.py  test_session_limit.py  test_spa_fallback.py  test_triager_reconcile.py
tools/: check_coverage_map.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: manifest.json  sw.js
ui/src/: App.tsx  api.ts  auth.ts  vite-env.d.ts
ui/src/pages/: ConvergeDetail.tsx  Dashboard.tsx  Login.tsx  Repos.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx  Triage.tsx
