[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pathspec>=0.12",
    "aiosqlite>=0.20",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "coverage>=7",
    "pyyaml>=6",
]
# Required only by the K8s-Job harness backend (HARNESS_EXECUTION_BACKEND=k8s, #51).
# Kept optional so the subprocess/dev path acquires no extra deps; the control-plane
# image installs ".[k8s]" so it can schedule agent Jobs.
k8s = [
    "kubernetes>=29",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "covers: mark a test as covering a SPEC §8 truth-table row; args: (section, row_id)",
    "integration_real: marks tests that require live credentials and network access",
]
